assets/css/main.css
/* ... */
pre {
  background: rgba(var(--main-color-rgb), .1);
  padding: 8px 14px;
  overflow-x: auto;
  overflow-wrap: normal;
}

pre code {
  background: none;
  padding: 0;
}

h1, h2, h3 {
  line-height: 1.2;
}

blockquote {
  font-style: italic;
  margin: 16px 0;
  padding: 0 20px;
  border-left: 4px solid var(--main-color);
}

body,
html {
  height: 100%;
  margin: 0;
}

body {
  font-family: var(--main-font);
  font-optical-sizing: auto;
  font-weight: 400;
  font-size: 16px;
  font-style: normal;
  color: var(--main-font-color);
}

body.vg-sidebar-open {
  overflow: hidden;
  height: 100%;
}

.vg-page-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  min-height: 100vh;
}

.vg-page {
  display: flex;
  max-width: 1440px;
  width: 100%;
  background: var(--background-color-light);
}

.vg-page-content_with-sidebar {
  width: calc(100% - 300px);
}

.vg-main {
  display: flex;
  min-height: calc(100vh - 200px);
  padding-bottom: 10px;
  box-sizing: border-box;
}

.vg-main-content {
  flex: 1;
  width: 100%;
  padding: 0 50px;
  box-sizing: border-box;
}

.vg-sidebar {
  position: sticky;
  top: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 300px;
  height: 100vh;
  padding: 80px 0;
  background: var(--main-color);
  box-sizing: border-box;
  transition: right 0.4s;
  overflow-y: auto;
  z-index: 1000;
  line-height: 1.4;
}

.vg-sidebar_home {
  display: none;
}

.vg-sidebar-main {
  display: flex;
  align-items: center;
  justify-content: start;
  flex-direction: column;
  box-sizing: border-box;
  overflow-y: auto;
}

.vg-sidebar-footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 80px;
  min-height: 80px;
  padding: 0 24px;
  background: var(--main-color);
}

.vg-social {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

.vg-social__item {
  display: flex;
  width: 32px;
  margin: 0 5px;
}

.vg-social__item svg {
  width: 100%;
  color: var(--background-color-light);
}

.vg-social__item:hover svg {
  opacity: .7;
}

.vg-sidebar__logo {
  width: 220px;
  height: 220px;
  min-height: 220px;
  min-width: 220px;
  background: var(--background-color-light);
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.vg-sidebar__logo img {
  width: 170px;
}

.vg-sidebar__about {
  padding: 30px 20px 40px;
  font-size: 24px;
  color: var(--background-color-light);
  text-align: center;
}

.vg-sidebar__menu {
  display: none;
  padding-bottom: 20px;
}

.vg-sidebar__menu .vg-menu-nav {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0;
}

.vg-sidebar__menu .vg-menu-nav__item {
  margin: 4px 0;
  color: var(--background-color-light);
  font-size: 26px;
}

.vg-sidebar-tags {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 0 24px;
  gap: 10px;
}

.vg-sidebar-tags__tag,
.vg-sidebar-tags__tag:visited {
  font-family: var(--secondary-font);
  white-space: nowrap;
  background: var(--background-color-light);
  padding: 10px;
  color: var(--background-color-dark);
  text-transform: lowercase;
}

.vg-sidebar-tags__tag:hover {
  font-weight: 700;
  color: var(--main-color);
  text-decoration: none;
}

.pagination {
  display: flex;
  justify-content: end;
  align-items: center;
  font-size: 24px;
}

.pagination .page-item {
  position: relative;
  min-width: 24px;
  padding: 0 5px;
  text-align: center;
  list-style: none;
  box-sizing: border-box;
}

.pagination .page-item a {
  color: var(--main-color);
  text-decoration: none;
}

.pagination .page-item::before {
  content: '';
  position: absolute;
  top: 4px;
  left: -1px;
  bottom: 4px;
  display: block;
  border-left: 1px solid var(--main-font-color);
}

.pagination .page-item:nth-child(-n+3)::before,
.pagination .page-item:nth-last-child(-n+2)::before {
  display: none;
}

.pagination .page-item.active a {
  color: var(--background-font-color);
}

.pagination .page-item.disabled {
  color: var(--background-color-dark);
}

.vg-404 {
  padding: 80px;
  text-align: center;
}

.vg-404__link {
  color: var(--main-color);
}

@media (max-width: 1024px) {
  .vg-page-content_with-sidebar {
    width: 100%;
  }

  .vg-sidebar {
    display: flex;
    position: fixed;
    right: -300px;
  }

  .vg-sidebar.is-active {
    right: 0;
  }

  .vg-sidebar__menu {
    display: block;
  }
}

@media (max-width: 768px) {
  .vg-main-content {
    padding: 0 20px;
  }

  .vg-sidebar {
    width: 100%;
    height: auto;
    bottom: 0;
    right: -100%;
    overflow-y: auto;
    padding-bottom: 0;
  }

  .vg-sidebar-main {
    flex: 1;
    overflow-y: visible;
  }

  .vg-sidebar-footer {
    position: static;
  }
}

@media (max-height: 850px) {
  .vg-sidebar__menu .vg-menu-nav__item {
    font-size: 24px;
  }

  .vg-sidebar__logo {
    width: 170px;
    height: 170px;
    min-height: 170px;
    min-width: 170px;
  }

  .vg-sidebar__logo img {
    width: 120px;
  }

  .vg-sidebar__about {
    font-size: 20px;
  }
}

@media (max-height: 640px) {
  .vg-sidebar__logo {
    display: none;
  }
}

/* HEADER */
.vg-header {
  display: flex;
  justify-content: space-between;
  height: 100px;
}

.vg-header_home {
  padding-right: 300px;
}

.vg-header__logo {
  padding: 18px 18px 0 50px;
}

.vg-header__logo a {
  display: inline-block;
}

.vg-header__logo img {
  width: 160px;
}

.vg-menu-nav {
  display: flex;
  justify-content: start;
  align-items: center;
  padding: 20px 50px 0;
  flex: 1;
  font-size: 24px;
}

.vg-menu-nav__item {
  margin: 0 15px;
  text-align: center;
  white-space: nowrap;
  color: var(--main-font-color);
}

.vg-menu-nav__item:first-child {
  margin-left: 0;
}

.vg-menu-nav__item:last-child {
  margin-right: 0;
}

.vg-menu-nav__item_active {
  font-weight: 700;
}
/* ... */

